# programming-in-haskell

./: .gitignore  programming-in-haskell.cabal
src/: boilerplate.hs  coinjam.hs  countingsheep.hs  girlfriend-out.txt  hangman.hs  hoFuncs.hs  listcompr.hs  lookup.hs  output_file.txt  pancakes.hs  parsers.hs  passwd-al.hs  readsong.hs  recurfuncs.hs  sheep.hs  tps.hs
tests/: test.hs
