name: programming-in-haskell
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
license-file: LICENSE
maintainer: yurasusuk@gmail.com
author: Iurii Susuk

library
    build-depends:
        base >=4.8 && <4.9,
        containers >= 0.5.6.2,
        split >= 0.2.3,
        digits >= 0.2,
        primes >= 0.2.1.0
    default-language: Haskell2010
    hs-source-dirs: src

test-suite test
    type: exitcode-stdio-1.0
    main-is: test.hs
    build-depends:
        base >=4 && <5,
        tasty >=0.11.0.2,
        tasty-hunit >=0.9.2,
        programming-in-haskell -any
    default-language: Haskell2010
    hs-source-dirs: tests src
